--- a/src/index.css
+++ b/src/index.css
@@ -229,13 +229,14 @@ header {
 header ul {
   gap: 1.4rem;
 }
+
 a {
   cursor: pointer;
-  pointer-events: auto; 
+  pointer-events: auto;
 }
 
 header ul li a {
-  pointer-events: auto; 
+  pointer-events: auto;
   cursor: pointer;
   color: var(--text-mode);
   opacity: 0.8;
@@ -284,7 +285,6 @@ header button.toggle-mode {
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.3), 0 2px 24px rgba(0, 0, 0, 0.3);
   transition: all 300ms ease-in;
   position: relative
-  
 }
 
 header .icon-sun {
@@ -496,11 +496,13 @@ header .fixed ul.modal li:first-child {
 @media (max-width: 870px) {
   .heroSection {
     display: block;
-    height: 300px!important;
+    height: 300px !important;
   }
+
   .left-hero-section {
-    max-width: 100%!important;
+    max-width: 100% !important;
   }
+
   .right-hero-section .animated {
     display: none;
   }
@@ -580,7 +582,7 @@ main .right-main .box {
   border: 1px solid var(--dark-mode-info-light);
   transition: all 500ms ease;
   background: linear-gradient(to right, rgba(240, 240, 240, .095), rgba(240, 240, 240, .095));
-  height: 300px;
+  height: 320px;
 }
 
 .card img {
@@ -828,6 +830,72 @@ main .right-main .box {
   border: transparent;
   color: rgb(215, 220, 228);
 }
+
+.skill-card:nth-child(17) .skill-level {
+  background: linear-gradient(45deg, rgba(255, 105, 180, 0.5), rgba(255, 182, 193, 0.5));
+  border: transparent;
+  color: rgb(215, 220, 228);
+}
+
+.skill-card:nth-child(18) .skill-level {
+  background: linear-gradient(45deg, rgba(173, 216, 230, 0.5), rgba(135, 206, 250, 0.7));
+  /* Light Blue to Sky Blue */
+  border: transparent;
+  color: rgb(215, 220, 228);
+}
+
+.skill-card:nth-child(19) .skill-level {
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.5));
+  border: transparent;
+  color: rgb(215, 220, 228);
+}
+
+.skill-card:nth-child(20) .skill-level {
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.5));
+  border: transparent;
+  color: rgb(215, 220, 228);
+}
+
+.skill-card:nth-child(21) .skill-level {
+  background: linear-gradient(45deg, rgba(0, 128, 0, 0.5), rgba(144, 238, 144, 0.7));
+  /* Dark Green to Light Green */
+  border: transparent;
+  color: rgb(215, 220, 228);
+}
+
+.skill-card:nth-child(22) .skill-level {
+  background: linear-gradient(45deg, rgba(0, 128, 0, 0.5), rgba(144, 238, 144, 0.7));
+  /* Dark Green to Light Green */
+  border: transparent;
+  color: rgb(215, 220, 228);
+}
+
+.skill-card:nth-child(23) .skill-level {
+  background: linear-gradient(45deg, rgba(0, 128, 0, 0.5), rgba(144, 238, 144, 0.7));
+  /* Dark Green to Light Green */
+  border: transparent;
+  color: rgb(215, 220, 228);
+}
+
+.skill-card:nth-child(24) .skill-level {
+  background: linear-gradient(45deg, rgba(128, 0, 128, 0.5), rgba(216, 191, 216, 0.7));
+  /* Dark Purple to Light Purple */
+  border: transparent;
+  color: rgb(215, 220, 228);
+}
+
+.skill-card:nth-child(25) .skill-level {
+  background: #ff4f4f28;
+  border-color: transparent;
+  color: #ff4f4f;
+}
+.skill-card:nth-child(26) .skill-level {
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.5));
+  border: transparent;
+  color: rgb(215, 220, 228);
+}
+
+
 
 /* 5.2 Skills media query */
 @media (min-width: 601px) and (max-width: 900px) {
